# A.E.G.I.S

./: .env.example  .gitignore  AI_CONTEXT.md  CHATDEV_README.md  README.md  main.py  pyproject.toml  pytest.ini
agents/: __init__.py  base_agent.py  code_architect.py  code_explorer.py  coding.py  feature_dev.py  orchestrator.py  researcher.py  reviewer.py  security_agent.py  tool_executor.py
chatdev_bridge/: README.md  __init__.py  aegis_node.py  config.py  memory_bridge.py  permission_enforcer.py
config/: hat_mode.toml  models.toml  normal_mode.toml  protocol_666.toml
core/: __init__.py  adaptive_security.py  config.py  mode.py  permissions.py
docs/: chatdev_integration.md
memory/: __init__.py  manager.py
scripts/: benchmark_coding.py  debug_agent.py  debug_rag_query.py  debug_tools.py  fix_memory_vectors.py  generate_config.py  quick_file_test.py  setup.py  setup_chatdev_bridge.py  test_chatdev_integration.py  test_coding_agent.py  test_coding_analysis.py  test_coding_tdd.py  test_enhanced_feature_dev.py  test_feature_dev.py  test_hat_mode.py  test_integration.py  test_memory.py  test_memory_integration.py  test_researcher.py  verify_fix.py  workflow_generator.py
test_output/: simple_test.txt  test_code.py
tests/: __init__.py  conftest.py
tmp/: hello_integration.py  math_utils.py  test_math_utils.py
tools/: __init__.py  definitions.py  security_tools.py
ui/: __init__.py
workflow_templates/: README.md  code_refactoring.yaml  research_analysis.yaml  security_audit.yaml
workflows/: README.md  aegis_protocol666_creative.yaml  aegis_simple_test.yaml  (+1 more)
(+15 files in other folders)
