[tool.poetry]
name = "aegis"
version = "1.0.0"
description = "Advanced Electronic Guardian & Intelligence System - Multi-Agent AI"
authors = ["Ryan <ultra@local>"]
readme = "README.md"
packages = [{include = "aegis"}]

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
chromadb = "^0.4.24"
sentence-transformers = "^2.3.0"
beautifulsoup4 = "^4.12.0"
playwright = "^1.40.0"
gitpython = "^3.1.40"
psutil = "^5.9.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aegis = "main:cli"
